--- a/config.yaml
+++ b/config.yaml
@@ -21,7 +21,7 @@ googleAnalytics: G-YMDYGPZL6S
 # Theme i18n support
 # Available values: ar, bn, ca, de, el, en, es, fr, hu, id, it, ja, ko, nl, pt-br, th, uk, zh-cn, zh-hk, zh-tw
 DefaultContentLanguage: en
-
+enableRobotsTXT: false
 # Set hasCJKLanguage to true if DefaultContentLanguage is in [zh-cn ja ko]
 # This will make .Summary and .WordCount behave correctly for CJK languages.
 hasCJKLanguage: true
@@ -239,3 +239,7 @@ markup:
   #imports:
    # - path: github.com/CaiJimmy/hugo-theme-stack/v3
     #  disable: false
+sitemap:
+  changefreq: monthly
+  filename: sitemap.xml
+  priority: 0.5
