--- a/config.yaml
+++ b/config.yaml
@@ -31,9 +31,10 @@ permalinks:
     page: /:slug/
 
 params:
-    adsense:
+    Adsense:
         client: "ca-pub-7891761786816782"
         inArticleSlot: "4398446754"
+
     mainSections:
         - post
     featuredImageField: image
